--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -49,10 +49,10 @@ body {
 }
 .display-7 {
   font-family: 'Rubik', sans-serif;
-  font-size: 1rem;
+  font-size: 1.1rem;
 }
 .display-7 > .mbr-iconfont {
-  font-size: 1.6rem;
+  font-size: 1.76rem;
 }
 /* ---- Fluid typography for mobile devices ---- */
 /* 1.4 - font scale ratio ( bootstrap == 1.42857 ) */
@@ -659,13 +659,13 @@ a:hover {
   box-shadow: none;
   color: #565656;
   font-family: 'Rubik', sans-serif;
-  font-size: 1rem;
+  font-size: 1.1rem;
   line-height: 1.43;
   min-height: 3.5em;
   padding: 1.07em .5em;
 }
 .form-control > .mbr-iconfont {
-  font-size: 1.6rem;
+  font-size: 1.76rem;
 }
 .form-control,
 .form-control:focus {
@@ -2149,73 +2149,65 @@ body {
     margin-left: 0 !important;
   }
 }
-.cid-rfkQSt3fNM {
+.cid-rj4lyJ9qmt {
   padding-top: 15px;
-  padding-bottom: 0px;
-  background-color: #efefef;
-}
-.cid-rfkQSt3fNM h3 {
-  text-align: center;
-  font-weight: 300;
-}
-.cid-rfkQSt3fNM .wrap {
-  width: 150px;
-  height: 150px;
-  margin: 0 auto;
-}
-.cid-rfkQSt3fNM .mbr-section-subtitle {
-  color: #767676;
-}
-.cid-rfkQSt3fNM .card {
-  -webkit-flex-basis: 100%;
-  flex-basis: 100%;
-  word-wrap: break-word;
-}
-.cid-rfkQSt3fNM ellipse {
-  stroke: rgba(206, 206, 206, 0.4);
-}
-.cid-rfkQSt3fNM path {
-  stroke: #55b4d4;
-}
-@media (max-width: 991px) and (min-width: 768px) {
-  .cid-rfkQSt3fNM .card {
-    -webkit-flex-basis: 33%;
-    flex-basis: 33%;
-  }
-}
-.cid-rfkS210P80 {
-  padding-top: 0px;
   padding-bottom: 15px;
-  background-color: #efefef;
+  background-color: #ffffff;
 }
-.cid-rfkS210P80 h3 {
-  text-align: center;
-  font-weight: 300;
-}
-.cid-rfkS210P80 .wrap {
-  width: 150px;
-  height: 150px;
+.cid-rj4lyJ9qmt .line {
+  background-color: #149dcc;
+  color: #149dcc;
+  align: center;
+  height: 2px;
   margin: 0 auto;
 }
-.cid-rfkS210P80 .mbr-section-subtitle {
-  color: #767676;
+.cid-rj4lyJ9qmt .section-text {
+  padding: 2rem 0;
 }
-.cid-rfkS210P80 .card {
-  -webkit-flex-basis: 100%;
-  flex-basis: 100%;
-  word-wrap: break-word;
+.cid-rj4lyJ9qmt .inner-container {
+  margin: 0 auto;
 }
-.cid-rfkS210P80 ellipse {
-  stroke: rgba(206, 206, 206, 0.4);
-}
-.cid-rfkS210P80 path {
-  stroke: #55b4d4;
-}
-@media (max-width: 991px) and (min-width: 768px) {
-  .cid-rfkS210P80 .card {
-    -webkit-flex-basis: 33%;
-    flex-basis: 33%;
+@media (max-width: 768px) {
+  .cid-rj4lyJ9qmt .inner-container {
+    width: 100% !important;
   }
+}
+.cid-rj4s7fP1Sg {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #efefef;
+}
+.cid-rj4s7fP1Sg .card-box {
+  background-color: #f9f295;
+  padding: 2rem;
+}
+.cid-rj4s7fP1Sg h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-rj4s7fP1Sg p {
+  color: #767676;
+  text-align: left;
+}
+.cid-rj4s7fP1Sg .card-wrapper {
+  position: relative;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-rj4s7fP1Sg .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s;
+}
+.cid-rj4s7fP1Sg .card-img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+}
+.cid-rj4s7fP1Sg P {
+  color: #333333;
 }
 .cid-rflD8FxdES {
   padding-top: 30px;
